kinda bullshit movement

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1 style="text-align:center;">FROGGER</h1>
-    <canvas id="canvas" width="400" height="600" style="border: 1px solid black; margin-left:auto; margin-right:auto; display:block;"></canvas>
+    <canvas id="canvas" width="420" height="600" style="border: 1px solid black; margin-left:auto; margin-right:auto; display:block;"></canvas>
   </body>
+  <script src="frogger.js"></script>
 </html>
