--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1 style="text-align:center;">FROGGER</h1>
     <canvas id="canvas" width="400" height="600" style="border: 1px solid black; margin-left:auto; margin-right:auto; display:block;"></canvas>
+    <button id="restart">Restart</button>
   </body>
   <script src="frogger.js"></script>
 </html>
