--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <script src="game/row.js"></script>
   </head>
   <body>
-    <h1 style="text-align:center;">FROGGER</h1>
-    <canvas id="canvas" width="400" height="600" style="border: 1px solid black; margin-left:auto; margin-right:auto; display:block;"></canvas>
-    <button id="restart">Restart</button>
+    <h1 style="text-align:center;margin-bottom:10px;">FROGGER</h1>
+    <button id="restart" style="margin-left:auto;margin-right:auto;display:block;margin-bottom:10px;">Restart</button>
+    <canvas id="canvas" width="400" height="600" style="border: 1px solid black; margin-left:auto; margin-right:auto; display:block;">
+    </canvas>
   </body>
   <script src="frogger.js"></script>
 </html>
